--- a/style.css
+++ b/style.css
@@ -1,33 +1,46 @@
 body{
     font-family: sans-serif;
 
-    width: fit-content;
+    /* width: fit-content; */
 }
 
 #Title, #moonInfo{
     font-size: 14px;
 
     text-align: center;
+
+    margin-top: 0;
+    margin-bottom: 2px;
 }
 
 #PlanPlot{
     display: block;
     margin-left: auto;
     margin-right: auto;
+
+    max-width: 100%;
 }
 
+
+#tableWrapper{
+    /* width: calc(100vw - 18px); */
+    width: 100%;
+    font-size: 14px;
+    overflow-x: auto;
+}
 table{
     display: inline-table;
     /* table-layout: fixed; */
     width: 100%;
     border-collapse: collapse;
-    border: 3px solid black;
+    border: 1.5px solid black;
+    word-break: keep-all;
 }
 
 table th,
 table td {
-    border: solid 3px;
-    padding: 5px;
+    border: solid 1px;
+    padding: 2px 4px;
 }
 
 #comments{
